--- a/src/components/Message.css
+++ b/src/components/Message.css
@@ -1,10 +1,10 @@
-.message {
+.message-card {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.message__desc {
+.message-card__author, .message-card__text {
   width: 80%;
   margin: 0;
   padding: 10px 15px;
