--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,8 @@
 .App {
   padding: 0 10px;
   background-color: #202020;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
