--- a/src/components/MessageForm.css
+++ b/src/components/MessageForm.css
@@ -1,21 +1,22 @@
 .message-form {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  width: 100%;
+  width: 80%;
   position: fixed;
   bottom: 0vh;
   left:0vw;
+  max-height: 40vh;
+  align-self: center;
 }
 
 .message-form__input {
   width: 80%;
   padding: 12px 20px;
-  margin: 8px 0;
+  margin: 8px;
   box-sizing: border-box; 
   border-radius: 4px;
   border: 1px solid black;
-  height: 20vh;
+  height: 50px;
   resize: none;
 }
 
@@ -28,7 +29,7 @@
   border: none;
   border-radius: 4px;
   color: white;
-  padding: 16px 32px;
+  padding: 16px;
   text-decoration: none;
   margin: 4px 2px;
   cursor: pointer;
