--- a/src/components/MessageForm.css
+++ b/src/components/MessageForm.css
@@ -3,9 +3,14 @@
   align-items: center;
   justify-content: center;
   flex-wrap: nowrap;
+  height: 20vh;
 }
 
 .message-form__input {
   margin-right: 8px !important;
   flex-grow: 1;
+}
+
+.message-form__button {
+  min-width: 30px !important;
 }
